<!--
  ~ /*
  ~ *  Created Luis Chumi on 23/5/23 9:38
  ~ *  Copyright Ⓒ 2023. All rights reserved Ⓒ 2023 http://freefuninfo.com/
  ~ *  Last modified: 22/5/23 23:58
  ~ *
  ~ *  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file
  ~ *  except in compliance with the License. You may obtain a copy of the License at
  ~ *  http://www.apache.org/licenses/LICENS... Unless required by applicable law or agreed to in writing, software
  ~ *   distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
  ~ *   either express or implied. See the License for the specific language governing permissions and
  ~ *   limitations under the License.
  ~ */
  -->

<resources>
    <string name="app_name">Gestion_Capacitaciones</string>
    <string name="app_copyright">ⒸLChumi</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_vista_cursos">VistaCursos</string>
    <string name="title_activity_bottom_menu">BottomMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_menu_inicio">MenuInicioActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LChumi</string>
    <string name="nav_header_subtitle">luischumi.9@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- tittles -->
    <string name="Institucion">Instituto Tecnologico del Azuay</string>
    <string name="txtPerfil">Perfil</string>
    <string name="txtCursosD">Cursos</string>
    <string name="ViewCurso">Mi Curso</string>
    <string name="txtPerfilD">Perfil de Usuario</string>
    <string name="txtTitleCursoPrograma">Cursos</string>
    <string name="txtTittle">Sistema de Gestion de Capacitaciones</string>
    <string name="Tecazuay">TecAzuay</string>
    <string name="txtTittleCursos">Cursos</string>
    <string name="txtTittlePerfil">Perfil</string>
    <string name="txtTittleMiscuros">Mis Cursos</string>
    <string name="Inicio">Inicio</string>
    <string name="FichaInscrpcion">Ficha de Inscripcion a Cursos</string>
    <string name="DatosPersonales">Datos Personales</string>
    <string name="InformacionLaboral">Informacion Laboral/Estudios</string>

    <!-- textViews -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txtPrograma">Programa</string>
    <string name="txtLogin">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="txtListaAsiatencias">Lista Asistencias</string>
    <string name="txtListasCursos">Lista Cursos</string>
    <string name="txtNomPrograma">Programa 1</string>
    <string name="txtNomCurso">Curso</string>
    <string name="txtEstadoCurso">En proceso</string>
    <string name="txtFechaInicio">Fecha Inicio</string>
    <string name="txtFechaFin">Fecha Fin</string>
    <string name="txtNombreEstudiante">Luis Gustavo Chumi Paida</string>
    <string name="idEstudiante">1</string>
    <string name="txtBienvenido">Bienvenido</string>
    <string name="txtInstituto">Instituto Tecnologico del Azuay</string>


    <!-- buttons -->
    <string name="btnRegistrarCurso">Registrarse</string>
    <string name="btnLoguin">Iniciar Sesion</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnGuardarAsistencias">Guardar</string>
    <string name="btnAplicar">Aplicar</string>

    <!-- alerts -->
    <string name="toastError">Ocurrio un Problema</string>
    <string name="toastOk">Bienvenido</string>

    <!-- text field value  -->
    <string name="valueUsuario">Usuario</string>
    <string name="valueCodigoCurso">CodigoCurso</string>
    <string name="valueNombreCurso">NombreCurso</string>
    <string name="valueModalidad">Modalidad</string>
    <string name="valueHorarios">Horarios del Curso</string>
    <string name="valueNombres">Nombres</string>
    <string name="valueApellidos">Apellidos</string>
    <string name="valueDireccionP">Direccion</string>
    <string name="ValueCargo">Cargo</string>
    <string name="valueCedula">Cedula de ciudadania</string>
    <string name="valueFechaNacimiento">Fecha de Nacimiento</string>
    <string name="valueSexo">Sexo</string>
    <string name="valueEtnia">Etnia</string>
    <string name="valueNroTelefeono">Nro de Telefono Convencional</string>
    <string name="valueNroTelefonoCelular">Nro de Telefono Celular</string>
    <string name="valueCorreo">Correo Electronico</string>
    <string name="valueNivelInstruccion">Nivel de Instruccion</string>
    <string name="valueInstitucionTrabEst">Institucion donde trabaja/estudia</string>
    <string name="valueDireccion">Direccion de la Institucion</string>
    <string name="valueCorreoElectronicoInstitucion">Correo Electronico de la Institucion</string>
    <string name="valueNroTelefonoInstitucion">Numero Telefonico Institucional</string>
    <string name="valueActividadInstitucion">Actividad de la Isntitucion</string>
    <string name="valueElCursoAuspiciado">¿El curso es auspiciado por la Institucion?</string>
    <string name="ValueComoDescubrio">¿Como se entero del curso?</string>
    <string name="ValueNombreAuspicinate">Indique el nombre de Auspiciante</string>
    <string name="ValueCursosSeguir">¿Que otros cursos le gustaria seguir?</string>
    <string name="valueFecha">dd-MM-yyy</string>
    <string name="valueDatosSilabo">Datos silabo</string>
    <string name="valueCurricular">Diseño curricular</string>
    <string name="valueEspecialidad">Especialidad</string>
</resources>