<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.ista.gestion_capacitaciones.UI.ui.inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_cursos"
        android:name="com.ista.gestion_capacitaciones.UI.ui.cursos.CursosFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_cursos" />

    <fragment
        android:id="@+id/nav_misCursos"
        android:name="com.ista.gestion_capacitaciones.UI.ui.misCursos.MisCursosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_miscursos" />
</navigation>