<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_institucion"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="601dp"
                android:layout_margin="16dp"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    android:text="Bienvenido"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="41sp"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="384dp"
                    android:layout_height="201dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/txtTittle"
                    android:textColor="#FFFFFF"
                    android:background="@color/colorPrimary"
                    android:textSize="18sp"
                    android:fontFamily="@font/hammersmith_one"
                    app:layout_constraintBottom_toTopOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Tecazuay"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"

                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"
                    app:layout_constraintVertical_bias="0.95" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="358dp"
                    android:layout_height="183dp"
                    android:paddingStart="20dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.238"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.272"
                    app:srcCompat="@drawable/logo_cuadrado" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLoguin"
                style="@android:style/Widget.Button"
                android:layout_width="287dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/btnLoguin"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>